istio/yaml/grayscale-release/internal/virtual-service-v2-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-ext-svc
spec:
  hosts:
    - hello.com
  http:
  - route:
    - destination:
        host: hello.hello-1.svc.cluster.local
        port:
          number: 8080
      weight: 90
    - destination:
        host: hello.hello-2.svc.cluster.local
        port:
          number: 8080
      weight: 10
